[package]
name = "ahnung"
version = "0.1.0"
authors = ["Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>"]
edition = "2018"

[[bin]]
name = "ahnung"
path = "src/main.rs"

[dependencies]
structopt = { version = "0.2.10", default-features = false }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-clippy", "run-cargo-test"]
