[package]
name = "ahnung"
version = "0.0.1"
authors = ["Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>"]

[lib]
name = "ahnung"
path = "src/lib.rs"

[[bin]]
name = "ahnung"
path = "src/main.rs"

[profile.release]
panic = "abort"

[dependencies]
structopt = "0.3.1"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
